--- a/data/homepage.yml
+++ b/data/homepage.yml
@@ -1,116 +1,117 @@
 # showcase
 showcase:
   enable: true
-  title: "Hello, I’m Rabbani."
-  subtitle: "Front-End Developer"
-  description: "I work at <a target='_blank' href='https://radity.com/'>Radity</a>, a software development company in Switzerland. And I am a Raditian. You get the idea where theme name comes from. Keep cool, stay in touch. You can download this theme from <a target='_blank' href='https://github.com/radity/raditian-free-hugo-theme'>github</a>."
+  title: "Transform Your Vision into Creative Results"
+  subtitle: "Hi, I'm Rabbani."
+  description: "A Certified Project Manager, Consultant & Engineering Technologist.</a>"
+  #Connect with me on <a target='_blank' href='www.linkedin.com/in/mohdrabbani/'>LinkedIn
   image:
-    x: "img/showcase/showcase.png"
-    _2x: "img/showcase/showcase@2x.png"
+    x: "img/showcase/img1.png"
+    _2x: "img/showcase/img1.png"
   imageMobile:
-    x: "img/showcase/showcase-mobile.jpg"
+    x: "img/showcase/img1.png"
 
   button:
     icon: "icon-mail-fill"
     btnText: "Contact"
-    URL: "https://radity.com/en/contact/"
+    URL: "https://wa.me/message/IY7REKYEJ4WTG1"
 
   socialLinks:
     - icon: "linkedin"
-      URL: "https://www.linkedin.com/company/radity/"
+      URL: "www.linkedin.com/in/mohdrabbani/"
 
     - icon: "github"
-      URL: "https://github.com/radity"
+      URL: "https://github.com/askrabz"
 
-    - icon: "twitter"
-      URL: "https://twitter.com/radity"
+    - icon: "whatsapp"
+      URL: "https://wa.me/message/IY7REKYEJ4WTG1"
 
-    - icon: "dribbble"
-      URL: "https://dribbble.com/radity"
+    #- icon: "dribbble"
+    #  URL: "https://dribbble.com/radity"
 
-    - icon: "behance"
-      URL: "https://www.behance.net/radity-digital"
+    #- icon: "behance"
+    #  URL: "https://www.behance.net/radity-digital"
 
-    - icon: "youtube"
-      URL: "https://www.youtube.com/channel/UCojEc6SPO-W1_CoeHhK9-Zw"
+    #- icon: "youtube"
+    #  URL: "https://www.youtube.com/channel/UCojEc6SPO-W1_CoeHhK9-Zw"
 
-    - icon: "instagram"
-      URL: "https://www.instagram.com/teamradity/"
+    #- icon: "instagram"
+    #  URL: "https://www.instagram.com/teamradity/"
 
-    - icon: "facebook"
-      URL: "https://www.facebook.com/raditycom/"
+    #- icon: "facebook"
+    #  URL: "https://www.facebook.com/raditycom/"
 
-    - icon: "codepen"
-      URL: "#"
+    #- icon: "codepen"
+    #  URL: "#"
 
-    - icon: "yelp"
-      URL: "https://www.yelp.com/"
+    #- icon: "yelp"
+    #  URL: "https://www.yelp.com/"
 
 # about
 about:
   enable: true
-  title: "Who am I?"
-  content: '<p class="lead">
-    I am back, after a few days of vacationing with family. Weather was awesome, the beach was
-    full of nasty jelly-fish, yuk! All-in-all, life has been good. I hope life has been as
-    good for all of you.
-    </p>
-    <p class="lead">
-    My area of focus lies in designing web and mobile products, user research as well as
-    leading of design & front-end teams. I enjoy designing and coding the UI as much as
-    talking with users to iterate and improve the experiences that reach business goals.
-    </p>'
+  title: "About Me"
+  content: 
+   '
+    <p class="lead"><h3><left>Delivering Excellence & Success</left></h3></p>
+    <p class="lead"><center>Proficient in Voice over Internet Protocol (VoIP), Telecommunications, and Unified Communication Technologies.</center></p>
+    <p class="lead"><b>Leveraging 19+ years of experience in:</b></p>
+    <p class="lead">- Project Management</p>
+    <p class="lead">- Service Delivery</p>
+    <p class="lead">- Engineering Management</p>
+    <p class="lead">- Consultation</p>
+  '
   button:
     icon: "icon-smile-fill"
-    btnText: "About Me"
-    URL: "https://www.linkedin.com/company/radity/"
+    btnText: "Succeed Today ->"
+    URL: "https://wa.me/message/IY7REKYEJ4WTG1"
   image:
-    x: "img/who-am-i/user-picture.png"
-    _2x: "img/who-am-i/user-picture@2x.png"
+    x: "img/who-am-i/IMG-1017-modified.png"
+    _2x: "img/who-am-i/IMG-1017-modified.png"
 
 # education
 education:
   enable: true
-  title: "Education"
+  title: "Qualifications"
   items:
-    - university: "University of Waterloo"
-      year: "2012-2017"
-      degree: "Bachelor of Applied Science (BASc), Electrical Engineering"
+    - university: "London Metropolitan University"
+      year: "2000-2003"
+      degree: "Bachelor of Science (BSc) with Honors, Computing and Information Technology"
 
-    - university: "Sir John A Macdonald CI"
-      year: "2009-2012"
-      degree: "High School Diploma, Sciences, Math, Computer & Business Studies"
+    - university: "Columbus University"
+      year: "2004-2006"
+      degree: "Masters in Business Administration (MBA) Major in Communications"
 
 # experience
 experience:
   enable: true
-  title: "Experience"
-  description: "Over 15+ years of experience working with companies from all over the world. I design & develop digital products to help businesses and improve people's lives."
+  title: "Summary"
+  description: "I’m a technology specialist working with business and technical teams from all over the world to help businesses and drive excellence. Predominately leading, planning, and implementing enterprise-level projects, improving operational efficiency, design & develop digital products and emerging cloud innovations."
   button:
     icon: "icon-linkedin-fill"
     btnText: "Linkedin"
-    URL: "https://www.linkedin.com/company/radity/"
-  button2:
-    icon: "icon-profile-fill"
-    btnText: "Download My Resume"
-    URL: "#"
+    URL: "www.linkedin.com/in/mohdrabbani/"
+ # button2:
+ #   icon: "icon-profile-fill"
+ #   btnText: "Download My Resume"
+ #   URL: "#"
 
   items:
-    - title: "Sr. Front-End Developer"
-      company: "Radity"
-      duration: "Feb 2011 - Sep 2019"
+    - title: "19+ Years"
+      company: "IT, Telecom, & Managed Services"
+      duration: "Exprience"
 
-    - title: "Sr. Front-End Developer"
-      company: "Textic"
-      duration: "Apr 2010 - Jan 2011"
+    - title: "150+"
+      company: "Small, Medium & Large Enterprises"
+      duration: "Sucessful Projects"
 
-    - title: "Jr. Front-End Developer"
-      company: "Cyberse"
-      duration: "Jun 2009 - Mar 2010"
+    - title: "250 ~ 300"
+      company: "Azure, Google, Aws, Proxmox & others"
+      duration: "Managed nodes"
 
 # Client & Work
 client_and_work:
-  title: "Clients & Works"
+  title: "Projects"
   enable: true
 
   clients:
@@ -145,8 +146,8 @@ client_and_work:
       alt: "Ztos"
 
   works:
-    - title: "Radity Finance - UI Kit"
-      description: "We have been receiving a lot of requests for a Finance Kit recently due to the popularity of Fintech."
+    - title: "Class 4 - SoftSwitch"
+      description: "A carrier-grade Class 4 SIP Soft Switch with integrated real-time billing and intelligent routing subsystem. Suitable for Call Termination Service (CTS) and Transiting voice traffic."
       button:
         icon: "icon-arrow-right"
         btnText: "Case Study"
@@ -156,8 +157,8 @@ client_and_work:
         _2x: "img/works/radity-finance@2x.jpg"
       is_even: true
 
-    - title: "Swiss Fintech Website"
-      description: "The Swiss Finance + Technology Association is the leading FinTech hub in Switzerland."
+    - title: "Class 5 - Unified Communication & PBX"
+      description: "A highly scalable, distributed, cloud-based telephony platform designed to provide enterprise & carrier grade unified communication switching functions and features. Built-in open APIs for 3rd Party integrations with pre-built applications."
       button:
         icon: "icon-arrow-right"
         btnText: "Case Study"
@@ -167,8 +168,8 @@ client_and_work:
         _2x: "img/works/swissfintech@2x.jpg"
       is_even: false
 
-    - title: "Robo Advisor"
-      description: "Robo Advisor is a Swiss Wealth Manager and wants to create the best digital experience for its UNHW clients across the world. We started with a whiteboard."
+    - title: "RM.SIP Proxy for Microsoft Teams"
+      description: "SIP RM.Proxy a.k.a Bespoke SBC for Microsoft Team - A high performance SIP proxy server designed to handle and dispatch SIP transactions between Microsoft Teams and any carrier grade class 4/5 soft switch or PBX. Seamless interconnection with effortless deployment. Supports TLS1.2+ encryption. Suitable for redundancy, load sharing & SBC."
       button:
         icon: "icon-arrow-right"
         btnText: "Case Study"
@@ -181,7 +182,7 @@ client_and_work:
 # testimonial
 testimonial:
   enable: true
-  title: "Testimonials"
+  title: "Tech Stack"
   items:
     - name: "Daniel Jordan"
       position: "Phonet, CEO"
